Fix HTML Table box-shadow clipping.

--- a/packages/structures/src/Table.css
+++ b/packages/structures/src/Table.css
@@ -8,6 +8,8 @@
 		&:where(table) {
 			table-layout: fixed;
 			inline-size: 100%;
+			border-collapse: separate;
+			border-spacing: 0;
 		}
 	}
 }
